samples/_failures_safe/1761486271_49a52c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff46d7b5.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_ff46d7b5.c:126:5: error: expected declaration or statement at end of input
  126 |     }
      |     ^
